# config-recommender

./: .gitignore  IMPLEMENTATION.md  INTEGRATION_VERIFICATION.md  README.md  STREAMLIT_UI.md  SUBMODULE_INTEGRATION.md  demo.py  example_run.py  pyproject.toml  requirements-dev.txt  requirements-submodule.txt  requirements.txt  setup.py  streamlit_app.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config_recommender/: __init__.py  __main__.py  cli.py  estimator.py  gpu_library.py  models.py  parser.py  recommender.py
examples/: README.md  advanced_usage.py  basic_usage.py  concurrent_users_example.py  custom_gpus.json  gpu_library_usage.py  json_workflow.py  models.json  tensor_parallelism_example.py
tests/: __init__.py  test_cli.py  test_concurrent_users.py  test_estimator.py  test_gpu_library.py  test_models.py  test_parser.py  test_recommender.py  test_sequence_length_ui.py  test_setup_dependencies.py  test_streamlit_ui.py  test_submodule_detection.py  test_tensor_parallelism.py
